clusters/cl02/apps/balance-saml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: balance-saml
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
  labels:
    app.kubernetes.io/name: balance-saml
    app.kubernetes.io/part-of: arencloud-identity
    istio-discovery: mesh-demo
    istio.io/rev: demo
